# Huffman-app

./: CMakeLists.txt  encryptionpage.cpp  encryptionpage.h  infopage.cpp  infopage.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
Huffman/: huffmanencoder.cpp  huffmanencoder.h
